# masact-code

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
foundations/: __init__.py  agent.py  budget.py  context.py  demo_flight.py  demo_team.py  journal.py  mailbox.py  messages.py  model.py  team.py  tools.py
foundations/algorithms/: __init__.py  argumentation.py  auctions.py  calibration.py  contract_net.py  dcop.py  dependability.py  evaluation.py  games.py  jury.py  lamport.py  retrieval.py  scaling.py  shapley.py  tool_schema.py
foundations/emergence/: __init__.py  cascade.py  naming_game.py  schelling.py
frontier/: README.md  __init__.py  rig.py  runners.py  tasks.py
frontier/framework_lab/: __init__.py  run.py  scorecard.py
frontier/interop/: __init__.py  agent_card.py  deadlock.py  mcp_client.py  mcp_server.py  run.py
frontier/patterns/: __init__.py  catalogue.py  compose.py  injections.py  run.py  signatures.py
frontier/scaling_lab/: __init__.py  jury.py  run.py  sweep.py
systems/: README.md
systems/coding_team/: __init__.py  brains.py  chaos_day.py  graph.py  run.py  state.py
systems/evaluation/: __init__.py  harness.py  judge.py  run.py
tests/: test_argumentation.py  test_auctions.py  test_calibration.py  test_cascade.py  test_contract_net.py  test_dcop.py  test_dependability.py  test_evaluation.py  test_frontier_framework.py  test_frontier_interop.py  test_frontier_patterns.py  test_frontier_scaling.py  test_games.py  test_jury.py  test_lamport.py  test_naming_game.py  test_retrieval.py  test_runtime.py  test_scaling.py  test_schelling.py  test_shapley.py  test_systems_chaos_day.py  test_systems_coding_team.py  test_systems_evaluation.py  test_tool_schema.py
